5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1851_2222.log
== TEST (2019-06-30 00:34:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho da matriz: "))
str = input("digite as linhas: ")
i = 0
for m in size(str):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print c
-- ERROR:
File "XXXX", line 10
    print c
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(c)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:34:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho da matriz: "))
str = input("digite as linhas: ")
i = 0
for m in size(str):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:34:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite o tamanho da matriz: "))
str = input("digite as linhas: ")
i = 0
for m in len(str):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:34:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

str = input("digite as linhas: ")
i = 0
for m in len(str):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:35:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

str = input("digite as linhas: ")
i = 0
for m in range(len(str)):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 00:35:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

str = input("digite as linhas: ")
i = 0
for m in range(len(str)):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- EXECUTION TIME:
1.0884
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
digite as linhas: [3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:36:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

str = input("digite as linhas: ")
i = 0
for m in range(len(str)):
	if(str[m] == " "):
		str[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:36:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
for m in range(len(str)):
	if(string[m] == " "):
		string[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:37:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
for m in range(len(string)):
	if(string[m] == " "):
		string[m] = ","
	c = "[" + str[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:37:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
for m in range(len(string)):
	if(string[m] == " "):
		string[m] = ","
	c = "[" + string[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:38:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
for m in range(len(string)):
	if(string[m] == " "):
		string[m] = str(",")
	c = "[" + string[m] + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:39:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
copy = ""
for m in range(len(string)):
	if(string[m] == " "):
		copy = copy + ","
	else:
		copy = copy + string[m]
	c = "[" + copy + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:39:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
copy = ""
for m in range(len(string)):
	if(string[m] == " "):
		copy = copy + ","
	else:
		copy = copy + string[m]
	c = "[" + copy + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:39:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

string = input("digite as linhas: ")
i = 0
copy = ""
for m in range(len(string)):
	if(string[m] == " "):
		copy = copy + ","
	else:
		copy = copy + string[m]
	c = "[" + copy + "]"
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:44:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b =0
copy = ""
copy2 = ""
while(b < n):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
		string = input("digite novamente")
	copy2 = copy2 + c + ","
	b = b + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:44:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
		string = input("digite novamente: ")
	copy2 = copy2 + c + ","
	b = b + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:45:22) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
		string = input("digite novamente: ")
	copy2 = copy2 + c + ","
	b = b + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:46:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
	copy2 = copy2 + c + ","
	string = input("digite novamente: ")
	b = b + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:46:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n-1):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
	copy2 = copy2 + c + ","
	string = input("digite novamente: ")
	b = b + 1
print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:49:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n-1):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
	copy2 = copy2 + c + ","
	string = input("digite novamente: ")
	b = b + 1
print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:51:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
b = 0
copy = ""
copy2 = ""
while(b < n-1):
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "]"
	copy2 = copy2 + c + ","
	b = b + 1
	string = input("digite novamente: ")
print(copy2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 00:56:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
		string = input("digite novamente: ")
	
	

-- EXECUTION TIME:
1.04838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1851/2222/main.py", line 14, in <module>
    copy2 = copy2 + c
NameError: name 'copy2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:56:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
		string = input("digite novamente: ")
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:57:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
		string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:57:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
copy2 = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
		string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:57:39) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
copy2 = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
		string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 00:57:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
string = input("digite as linhas: ")
i = 0
copy = ""
copy2 = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:01:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:01:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "[" + copy + "],"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:02:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "," + "[" + copy + "],"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:02:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = "," + "[" + copy + "],"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:03:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
		c = [" + copy + "]"
		copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
File "XXXX", line 14
    c = [" + copy + "]"
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:03:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
	c = [" + copy + "]"
	copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
File "XXXX", line 14
    c = [" + copy + "]"
                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 01:03:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
n = int(input("digite n: "))
i = 0
copy = ""
copy2 = ""
string = ""
for num in range(n):	
	for m in range(len(string)):
		if(string[m] == " "):
			copy = copy + ","
		else:
			copy = copy + string[m]
	c = "[" + copy + "]"
	copy2 = copy2 + c
	string = input("digite novamente: ")
print(copy2)
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
